# genshin-dialogue-autoskip-linux

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
genshin_autoskip/: calibrate.py  config.py  detector.py  hotkeys.py  injector.py  main.py  timing.py  ui.py  window.py
tests/: test_config.py  test_detector.py  test_hotkeys.py  test_injector.py  test_main.py  test_timing.py  test_ui.py  test_window.py
