[project]
name = "genshin-autoskip"
version = "0.1.0"
description = "Dialog-Autoskipper für Genshin Impact unter Linux (Wine/XWayland)"
requires-python = ">=3.11"
dependencies = [
    "python-xlib>=0.33",
    "evdev>=1.7",
    "pillow>=10",
]

[project.scripts]
genshin-autoskip = "genshin_autoskip.main:cli"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genshin_autoskip"]
